[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scenes/CameraController.gd" type="Script" id=1]

[node name="CameraController" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.6, 0.6 )
limit_left = 0
limit_top = 0
limit_right = 360
limit_bottom = 240

[node name="ScreenShakerTween" type="Tween" parent="."]

[node name="Frequency" type="Timer" parent="."]
wait_time = 0.07

[node name="Duration" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="Frequency" to="." method="_on_Frequency_timeout"]
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
